--- a/login screen/styles.css
+++ b/login screen/styles.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   background: url(https://picsum.photos/id/1080/1900);
   object-fit: cover;
   height: 100vh;
@@ -110,4 +112,11 @@ input[type="submit"]:hover {
 
 .signup_link a:hover {
   text-decoration: underline;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: #e9f4fb;
 }
