--- a/register/register.css
+++ b/register/register.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   background: url(https://picsum.photos/id/292/1900/1200);
   object-fit: cover;
   height: 100vh;
