--- a/products/products.css
+++ b/products/products.css
@@ -81,14 +81,8 @@ body {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
   border-radius: 10px;
-}
-
-.modal-content h3 {
-  text-align: center;
-  padding: 0 0 20px 0;
-  border-bottom: 2px solid silver;
 }
 
 /* The Close Button */
@@ -106,6 +100,82 @@ body {
   cursor: pointer;
 }
 
-#myBtn {
-  display: flex;
+.center h1 {
+  text-align: center;
+  padding: 0 0 20px 0;
+  border-bottom: 1px solid silver;
+}
+
+.center form {
+  padding: 0 40px;
+  box-sizing: border-box;
+}
+
+form .text_area {
+  position: relative;
+  border-bottom: 2px solid #adadad;
+  margin: 30px 0;
+}
+
+.text_area input {
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.text_area label {
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #adadad;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: 0.5s;
+}
+
+.text_area span::before {
+  content: "";
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: #2691d9;
+  transition: 0.5s;
+}
+
+.text_area input:focus ~ label,
+.text_area input:valid ~ label {
+  top: -5px;
+  color: #2691d9;
+}
+
+.text_area input:focus ~ span::before,
+.text_area input:valid ~ span::before {
+  width: 100%;
+}
+
+input[type="submit"] {
+  width: 100%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  font-weight: 700;
+  cursor: pointer;
+  outline: none;
+  margin: 15px;
+  margin-left: 5px;
+}
+
+input[type="submit"]:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
 }
