--- a/products/products.css
+++ b/products/products.css
@@ -14,10 +14,27 @@ body {
 
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   padding: 10px;
   font-size: 25px;
+}
+
+.header button {
+  width: 7%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  cursor: pointer;
+  outline: none;
+}
+
+.header button:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
 }
 
 .product img {
