--- a/products/products.css
+++ b/products/products.css
@@ -196,3 +196,15 @@ input[type="submit"]:hover {
   border-color: #2691d9;
   transition: 0.5s;
 }
+
+.product button {
+  width: 40%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  cursor: pointer;
+  outline: none;
+}
