--- a/products/products.css
+++ b/products/products.css
@@ -212,14 +212,20 @@ input[type="submit"]:hover {
 #cart {
   position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
+  left: 100%;
+  width: 100vw;
   bottom: 0;
   z-index: 3;
   background-color: #2691d9;
+  transition: all 0.5s linear;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow-y: scroll;
 }
 
 #cart.active {
+  left: 0;
 }
 
 #cart-btn {
