--- a/products/products.css
+++ b/products/products.css
@@ -209,6 +209,11 @@ input[type="submit"]:hover {
   outline: none;
 }
 
+.product button:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
+}
+
 #cart {
   position: fixed;
   top: 0;
@@ -233,4 +238,26 @@ input[type="submit"]:hover {
   right: 5%;
   bottom: 5%;
   z-index: 10;
+}
+
+#filters {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+#searchItem {
+  border-radius: 25px;
+}
+
+#filters button {
+  width: 60px;
+  height: 25px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 15px;
+  color: #e9f4fb;
+  cursor: pointer;
+  outline: none;
 }
