--- a/products/products.css
+++ b/products/products.css
@@ -20,23 +20,6 @@ body {
   font-size: 25px;
 }
 
-.header button {
-  width: 7%;
-  height: 50px;
-  border: 1px solid;
-  background: #2691d9;
-  border-radius: 25px;
-  font-size: 18px;
-  color: #e9f4fb;
-  cursor: pointer;
-  outline: none;
-}
-
-.header button:hover {
-  border-color: #2691d9;
-  transition: 0.5s;
-}
-
 .product img {
   height: 200px;
   width: 200px;
@@ -233,12 +216,12 @@ input[type="submit"]:hover {
   left: 0;
 }
 
-#cart-btn {
+/* #cart-btn {
   position: fixed;
   right: 5%;
   bottom: 5%;
   z-index: 10;
-}
+} */
 
 #filters {
   display: flex;
@@ -260,4 +243,43 @@ input[type="submit"]:hover {
   color: #e9f4fb;
   cursor: pointer;
   outline: none;
+}
+
+#myBtn {
+  width: 75%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  cursor: pointer;
+  outline: none;
+}
+
+#myBtn:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
+}
+
+#cart-btn {
+  width: 75%;
+  height: 50px;
+  border: 1px solid;
+  background: #2691d9;
+  border-radius: 25px;
+  font-size: 18px;
+  color: #e9f4fb;
+  cursor: pointer;
+  outline: none;
+}
+
+#cart-btn:hover {
+  border-color: #2691d9;
+  transition: 0.5s;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
 }
